# routine

./: .env.example  .gitignore  AGENTS.md  Makefile  lefthook.yml  mise.toml  package-lock.json  playwright.config.ts
.claude/: settings.json
.codex/: hooks.json
backend/: AGENTS.md  CLAUDE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260311_000001_baseline.py
backend/scripts/: db_migrate.py
backend/src/routineops/: main.py
backend/src/routineops/app/: __init__.py  auth.py  request_context.py
backend/src/routineops/application/: __init__.py  container.py
backend/src/routineops/application/dashboard/: __init__.py  query_service.py  service.py
backend/src/routineops/application/executions/: __init__.py  ports.py  service.py
backend/src/routineops/application/queries/: __init__.py  dashboard_query_service.py
backend/src/routineops/application/services/: schedule_service.py
backend/src/routineops/application/shared/: __init__.py
backend/src/routineops/application/tasks/: __init__.py  ports.py  schedule.py  service.py
backend/src/routineops/application/tenants/: __init__.py  bootstrap.py  provisioning.py
backend/src/routineops/config/: __init__.py  settings.py
backend/src/routineops/domain/: exceptions.py
backend/src/routineops/domain/entities/: execution.py  task.py  tenant.py
backend/src/routineops/domain/value_objects/: cron_expression.py  evidence_type.py  execution_status.py
backend/src/routineops/infrastructure/auth/: cognito.py  post_confirmation_trigger.py
backend/src/routineops/infrastructure/db/: base.py  dsql_compat.py  engine.py  session.py
backend/src/routineops/infrastructure/db/models/: __init__.py  execution_model.py  execution_step_model.py  step_model.py  task_model.py
backend/src/routineops/infrastructure/gateways/: cognito_gateway.py  dsql_tenant_provisioning_gateway.py
backend/src/routineops/infrastructure/monitoring/: __init__.py  logging.py  sentry.py
backend/src/routineops/infrastructure/repositories/: base_repository.py  execution_repository_impl.py  task_repository_impl.py
backend/src/routineops/infrastructure/storage/: s3_storage.py
backend/src/routineops/interface/api/: deps.py  error_handlers.py
backend/src/routineops/interface/api/v1/: dashboard.py  executions.py  router.py  steps.py  tasks.py
backend/src/routineops/interface/schemas/: dashboard.py  execution.py  step.py  task.py
backend/src/routineops/usecases/: __init__.py  dashboard_usecases.py  execution_usecases.py  task_usecases.py
backend/src/routineops/usecases/interfaces/: __init__.py  execution_repository.py  storage_port.py  task_repository.py
docs/: architecture-redesign.md
frontend/: .eslintrc.cjs  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
infra/: AGENTS.md  CLAUDE.md  main.tf  outputs.tf  variables.tf  (+1 more)
(+232 files in other folders)
