[project]
name = "routineops"
version = "0.1.0"
description = "RoutineOps Tracker - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "mangum>=0.17.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "croniter>=2.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.14.0",
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/routineops"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "alembic>=1.14.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
